Actions
Bug #11712
closedinstallboot: ignore the case of missing loader64.efi or loader32.efi
Start date:
Due date:
% Done:
100%
Estimated time:
Difficulty:
Medium
Tags:
Gerrit CR:
Description
If we are activating old be, we may not have loader64.efi/loader32.efi in such be.
We do not really want to chase previous versions of the efi boot programs - if we do have new one installed in ESP, version check will not allow the update anyhow so we will ignore missing efi boot programs.
Make sure we do not leave allocated boot block memory in case the boot program read failed, also avoid malloc(0).
Testing done: removed efi boot program from ESP, removed boot/loader32.efi, confirmed installboot does behave as expected.
Updated by Electric Monk almost 3 years ago
- Status changed from In Progress to Closed
- % Done changed from 90 to 100
git commit 46d70dced0faeb87f53b7bd42d46bba4f37737e9
commit 46d70dced0faeb87f53b7bd42d46bba4f37737e9 Author: Toomas Soome <tsoome@me.com> Date: 2019-09-20T16:58:28.000Z 11712 installboot: ignore the case of missing loader64.efi or loader32.efi Reviewed by: Andy Fiddaman <omnios@citrus-it.co.uk> Reviewed by: Yuri Pankov <yuri.pankov@nexenta.com> Approved by: Dan McDonald <danmcd@joyent.com>
Actions